[project]
name = "surf-companion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "fastapi>=0.115.11",
    "ipykernel>=6.29.5",
    "modal>=0.73.87",
    "pydantic[email]>=2.10.6",
    "requests>=2.32.3",
    "ruff>=0.9.9",
    "sqlmodel>=0.0.23",
]


[tool.black]
line-length = 120
target-version = ["py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 120
target-version = "py312"
select = ["E", "F", "B", "I", "N", "UP", "ANN", "C4", "SIM", "ERA"]
ignore = ["ANN101", "ANN102"]
